--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href="./assets/css/Cabeçalho/menu-cabecalho.css">
         <link rel="stylesheet" href="./assets/css/banner/banner.css">
         <link rel="stylesheet" href="./assets/css/sobre/about.css">
-        <link rel="stylesheet" href="./assets/css/Vagas/vagas.css">
         <link rel="stylesheet" href="./assets/css/receitas/receitas.css">
         <link rel="stylesheet" href="./assets/css/quem somos/about_us.css">
         <link rel="stylesheet" href="./assets/css/quem somos/pessoas.css">
+        <link rel="stylesheet" href="./assets/css/rodapé/footer.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -110,5 +110,8 @@
                 </div>
             </div>
         </section>
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
